--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-tinc-1.0.12.tar.gz
-/tinc-1.0.13.tar.gz
-/tinc-1.0.16.tar.gz
-/tinc-1.0.19.tar.gz
-/tinc-1.0.21.tar.gz
-/tinc-1.0.22.tar.gz
-/tinc-1.0.23.tar.gz
-/tinc-1.0.24.tar.gz
-/tinc-1.0.26.tar.gz
+/tinc-*.tar.gz
